# roar-protocol

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  Dockerfile  GITHUB_TOKEN_ROTATION_CHECKLIST.md  GOVERNANCE.md  INSTALL.md  LICENSE  PRODUCTION-HARDENING.md  README.md  ROAR-SPEC.md  SDK-ROADMAP.md  SECURITY-AUDIT-FINAL.md  SECURITY-AUDIT.md  SECURITY-REVIEW-2026-03.md  SECURITY.md  THREAT-MODEL.md  docker-compose.yml  docker-entrypoint.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_change.md
.github/workflows/: ci.yml
assets/: badges.md
benchmarks/: benchmark_suite.py
deployment/: docker-compose.observability.yml  docker-compose.prod.yml
deployment/docker/: Dockerfile.agent  Dockerfile.hub  Dockerfile.prod
deployment/kubernetes/: agent-deployment.yml  configmap.yml  hub-deployment.yml  namespace.yml  networkpolicy.yml  redis-deployment.yml
deployment/monitoring/: alerting.yml  otel-collector-config.yml  prometheus.yml
deployment/nginx/: roar.conf
docs/: AAIF-SUBMISSION.md  COMPLIANCE-MATRIX.md  DIAGRAMS.md  DNS-DISCOVERY.md  PRIVACY.md  TUTORIALS.md
docs/deployment/: PRODUCTION_DEPLOYMENT.md  RUNBOOK.md  SECURITY.md
examples/: README.md
examples/demo/: README.md  agent_a.py  agent_b.py  cross_framework.py  dns_discovery_bridge.py  hub.py  mcp_to_a2a_bridge.py  public_registry.py
examples/playground/: index.html
go/: client.go  client_test.go  go.mod  hub.go  hub_test.go  server.go  server_test.go  signing.go  signing_test.go  streaming.go  streaming_test.go  types.go  types_test.go
python/: README.md  pyproject.toml
python/src/roar_sdk/: __init__.py  _compat.py  asgi.py  audit.py  auth_middleware.py  autonomy.py  bridge.py  cli.py  client.py  dedup.py  delegation.py  did_document.py  did_key.py  did_resolver.py  did_web.py  discovery_cache.py  dns_discovery.py  event_bridge.py  ha.py  heartbeat.py  hub.py  hub_auth.py  key_trust.py  migration.py  otel.py  plugin.py  registry.py  router.py  server.py  signing.py  sqlite_directory.py  streaming.py  token_store.py  tracing.py  transaction.py  types.py  verifiable_credentials.py  verifier.py  well_known.py  workflow.py
python/src/roar_sdk/adapters/: __init__.py  a2a.py  acp.py  autogen.py  crewai.py  detect.py  langgraph.py  mcp.py
python/src/roar_sdk/middleware/: __init__.py  rate_limiter.py
python/src/roar_sdk/transports/: __init__.py  grpc.py  http.py  quic.py  stdio.py  websocket.py
research/: phase1-landscape-analysis.md  phase2-technical-deep-dives.md  phase3-validation-strategy.md
rust/: Cargo.toml
rust/src/: hub.rs  (+5 more)
spec/: 01-identity.md  02-discovery.md  03-connect.md  04-exchange.md  05-stream.md  COMPATIBILITY.md  VERSION.json
tests/: README.md  check_signature.py  check_signature_ts.mjs  check_spec_sdk_alignment.mjs  check_spec_sdk_alignment.py  check_strict_verifier.mjs  check_strict_verifier.py  check_versions.mjs  check_versions.py  interop-matrix.md  test_3party_delegation.py  test_a2a_adapter.py  test_adapters.py  test_attestation.py  test_audit.py  test_auth_middleware.py  test_bridge.py  test_canonicalization.py  test_conformance_delegation_chains.py  test_conformance_edge_cases.py  test_conformance_replay.py  test_conformance_signatures.py  test_conformance_unauthorized.py  test_cross_sdk_interop.py  test_did_resolver.py  test_dns_discovery.py  test_event_bridge.py  test_framework_adapters.py  test_future_timestamp_interop.py  test_grpc_transport.py  test_hub_auth.py  test_key_trust.py  test_live_interop.py  test_mcp_adapter.py  test_migration.py  test_negative.py  test_otel.py  test_plugin.py  test_protocol_adapters.py  test_quic_transport.py  (+7 more)
ts/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
(+86 files in other folders)
