[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roar-sdk"
version = "0.2.1"
description = "ROAR Protocol — Python SDK. Standalone implementation of the 5-layer agent communication standard."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "kdairatchi", email = "kdairatchi@users.noreply.github.com" }]
keywords = ["agents", "ai", "protocol", "roar", "did", "a2a", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
http = ["httpx>=0.25"]
websocket = ["websockets>=12.0"]
ed25519 = ["cryptography>=41.0"]
server = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "httpx>=0.25"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.25", "websockets>=12.0", "cryptography>=41.0"]

[project.urls]
Homepage = "https://github.com/ProwlrBot/roar-protocol"
Repository = "https://github.com/ProwlrBot/roar-protocol"
Specification = "https://github.com/ProwlrBot/roar-protocol/blob/main/ROAR-SPEC.md"

[tool.hatch.build.targets.wheel]
packages = ["src/roar_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
