[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roar-sdk"
version = "0.3.2"
description = "ROAR Protocol — Python SDK. Standalone implementation of the 5-layer agent communication standard."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "kdairatchi", email = "kdairatchi@users.noreply.github.com" }]
keywords = ["agents", "ai", "protocol", "roar", "did", "a2a", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "base58>=1.0"]

[project.optional-dependencies]
http = ["httpx>=0.25"]
websocket = ["websockets>=12.0"]
quic = ["aioquic>=1.0"]
http3 = ["httpx[http2]>=0.25"]
ed25519 = ["cryptography>=41.0"]
server = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "httpx>=0.25", "gunicorn>=21.0", "cryptography>=41.0"]
cli = ["httpx>=0.25", "cryptography>=41.0"]
redis = ["redis>=5.0"]
monitoring = ["prometheus-fastapi-instrumentator>=7.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.25", "websockets>=12.0", "cryptography>=41.0", "bandit>=1.7", "pip-audit>=2.7", "mypy>=1.8", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/ProwlrBot/roar-protocol"
Repository = "https://github.com/ProwlrBot/roar-protocol"
Specification = "https://github.com/ProwlrBot/roar-protocol/blob/main/ROAR-SPEC.md"

[project.scripts]
roar = "roar_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roar_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
